2016-07-26 Bjoern Bornkamp (version 0.9-15)
      * Mods Added parameter names for all models in the output list
        (thanks to Dong Xi for catching this)	

2016-02-02 Bjoern Bornkamp (version 0.9-14)
      * planMod.Rd Documentation slightly extended.
      * qmvtDF moved back to qmvt function from mvtnorm, as problems
	in mvtnorm are fixed.

2015-10-31 Bjoern Bornkamp (version 0.9-13)
      * projPrBnds now also covers the case when parameter was exactly
	on the bound
      * bFitMod doseNam changes
      * critVal Added self-written qmvt function qmvtDF	(as mvtnorm::qmvt
	got instable on Windows 32bit from release 1.0-3), hopefully
	superfluous once mvtnorm fixes this.
	
2014-09-28 Bjoern Bornkamp (version 0.9-12)
      * glycobrom dataset: Included column for number of observations
	per treatment.
      * calcCrit now takes into account "nold" in determining whether
	enough design points were specified to be able to calculate
	the design criteria.
      * bFitMod documentation for plot.bFitMod and predict.bFitMod
	methods added. coef.bFitMod method added. Thanks to Lieven Nils
	Kennes for pointing towards the issue.

2014-02-11 Bjoern Bornkamp (version 0.9-11)
      * Mods Introduce fullMod argument to allow specification
	of full model parameters (again).
      * calcTDgrad now calculates the analytical gradient for TD
	optimal designs for the beta model. The previous numerical
	gradient could get unstable for particular parameter values.
	Thanks to Tobias Mielke for the calculations!
      * planMod.Rd, powMCT.Rd More description on what "sigma" is
      * optDesign, optContr Catch Mods objects with multiple direction
	attributes properly in these functions.	

2013-11-25 Bjoern Bornkamp (version 0.9-10)
      * plot.MCPMod In case of no significant model, do not plot anything.
      * optContr Bugfix in function constOptC, previous algorithm selected
	in some situation an incorrect active set (and hence a suboptimal