@@ -1,3 +1,13 @@
+2019-11-13 Bjoern Bornkamp (version 0.9-17)
+      * Added citation to DESCRIPTION file
+      * Removed alpha argument for pValues function (not used)
+      * Propagate error messages from mvtnorm in pValues function
+	(e.g. cov-matrix not psd), (thx to Daisy Bai)
+      * Make direction attribute in Mods object unique (thx to Yuhan Li)
+
+2017-12-07 Bjoern Bornkamp (version 0.9-16)
+      * Fixed minor bug in print.summary.planMod
+	
 2016-07-26 Bjoern Bornkamp (version 0.9-15)
       * Mods Added parameter names for all models in the output list
         (thanks to Dong Xi for catching this)	
